--- a/io.html
+++ b/io.html
@@ -36,6 +36,7 @@
 
 <a href="acestream://162942adc047d0f78eac056effbe5bbec54a5e51" style="text-decoration:none">DAZN LIGA F3</a><br>
 <a href="acestream://897e73c9d578848f596585314ecb9ae067c0e229" style="text-decoration:none">DAZN 1 Bar HD [DE]</a><br>
+<a href="acestream://8ca07071b39185431f8e940ec98d1add9e561639" style="text-decoration:none">DAZN 1 (dial 70)</a><br>
 <a href="acestream://7aa402bab9fff43258fbcf401881a39475f30aaf" style="text-decoration:none">DAZN 2</a><br>
 <a href="acestream://60dbeeb299ec04bf02bc7426d827547599d3d9fc" style="text-decoration:none">DAZN 2</a><br>
 <a href="acestream://12ea555d431dbe51fc8e4ca745aec09fe22a4865" style="text-decoration:none">DAZN 2 BAR HD [DE]</a><br>
@@ -158,7 +159,6 @@
 <a href="acestream://75251ba975132ec9a202806ba5bf606e87280c96" style="text-decoration:none">DAZN Liga</a><br>
 <a href="acestream://a3bca895c58d3fc7d5e4259d3d5e3cf0291d1914" style="text-decoration:none">DAZN Laliga</a><br>
 <a href="acestream://1960a9be8ae9e8c755330218eac4c5805466290a" style="text-decoration:none">DAZN Laliga</a><br>
-<a href="acestream://8ca07071b39185431f8e940ec98d1add9e561639" style="text-decoration:none">DAZN 1</a><br>
 <a href="acestream://eaff9293c76a324c750ef5094c2a4e2c96518d1f" style="text-decoration:none">DAZN 1</a><br>
 <a href="acestream://2ce71f25114cf5fbf04816bcb1be980fb6676064" style="text-decoration:none">Formula F1 TV pro 1080p</a></br>
 <a href="acestream://63ab9528b16e536be0da44d6f5aceac357292b95" style="text-decoration:none">Fox Sports Laliga</a></br>
