--- a/io.html
+++ b/io.html
@@ -109,8 +109,8 @@
 <a href="acestream://e2e2aca792aae5da19995ac516b1d620531bd49c" style="text-decoration:none">M+ Liga de Campeones</a><br>
 <a href="acestream://6753492c1908274c268a1b28e2a054a0ff8f86f9" style="text-decoration:none">M+ Liga de Campeones 2</a><br>
 <a href="acestream://fc2fe31b0bce25e2dc7ab4d262bf645e2be5a393" style="text-decoration:none">M+ Liga de Campeones 2</a><br>
-<a href="acestream://ad372cba73aa0ece207a79532b3e30b731136bb2" style="text-decoration:none">M+ Liga de Campeones 3</a><br>
-<a href="acestream://d59fe9978eed49f256b312a60671b5bce43d3f24" style="text-decoration:none">M+ Liga de Campeones 3</a><br>
+<a href="acestream://ad372cba73aa0ece207a79532b3e30b731136bb2" style="text-decoration:none">M+ Liga de Campeones 3 (dial 62)</a><br>
+<a href="acestream://d59fe9978eed49f256b312a60671b5bce43d3f24" style="text-decoration:none">M+ Liga de Campeones 3 (dial 62)</a><br>
 <a href="acestream://1b48d5881337c87b89e1edefff6688fe2271d222" style="text-decoration:none">M+ Liga de Campeones 4</a><br>
 <a href="acestream://5c21c181156f200d5e628ef2c62cd06bf5f97eb7" style="text-decoration:none">M+ Liga de Campeones 5</a><br>
 <a href="acestream://a0978a100de9a307c12d395d9b2f4142db6ab52d" style="text-decoration:none">M+ Liga de Campeones 6</a><br>
