--- a/io.html
+++ b/io.html
@@ -93,8 +93,8 @@
 <a href="acestream://8587ed8ac36ac477e1d4176d3159a38bd154d4ce" style="text-decoration:none">M+ Deportes 6</a><br>
 <a href="acestream://2448f1d084f440eed2fbe847e24f1c02f5659a78" style="text-decoration:none">M+ Deportes 7</a><br>
 <a href="acestream://67654e63b5065cdaa6c8e8d41bb5428b42b32830" style="text-decoration:none">M+ Ellas Vamos</a></br>
-<a href="acestream://4f945b0ba4206fa2676b61e9eaa465ac3dcc8122" style="text-decoration:none">M+ Golf</a><br>
-<a href="acestream://9a4f3ae6563668b7709dac509dedc709441b3fd9" style="text-decoration:none">M+ Golf 2</a><br>
+<a href="acestream://4f945b0ba4206fa2676b61e9eaa465ac3dcc8122" style="text-decoration:none">M+ Golf (dial 67)</a><br>
+<a href="acestream://9a4f3ae6563668b7709dac509dedc709441b3fd9" style="text-decoration:none">M+ Golf 2 (dial 68)</a><br>
 <a href="acestream://7d8c87e057be98f00f22e23b23fbf08999e4b02f" style="text-decoration:none">M+ LaLiga TV</a><br>
 <a href="acestream://f031f5728b32f6089dda28edebe990cf198108d8" style="text-decoration:none">M+ LaLiga TV</a><br>
 <a href="acestream://1969c27658d4c8333ab2c0670802546121a774a5" style="text-decoration:none">M+ LaLiga TV</a><br>
