--- a/io.html
+++ b/io.html
@@ -120,8 +120,7 @@
 
 
 
-<a href="acestream://859bb6295b8d0f224224d3063d9db7cdeca03122" style="text-decoration:none">M+ Vamos</a><br>
-<a href="acestream://3bba7c95857c2502c7e03ced1a6a9b00eb567fa0" style="text-decoration:none">M+ Vamos</a><br>
+<a href="acestream://3bba7c95857c2502c7e03ced1a6a9b00eb567fa0" style="text-decoration:none">M+ Vamos (dial 8)</a><br>
 <a href="acestream://ed3c01f29c435b67b120245de556b0642538f1de" style="text-decoration:none">M+</a><br>
 <a href="acestream://3e31cebb2c9678dfdbb2bf1fff298c4b0b2eee2d" style="text-decoration:none">M+</a><br>
 <a href="acestream://b781f665a8036a6fcc83c998ae22968c4903b6a3" style="text-decoration:none">M+</a><br>
@@ -171,6 +170,7 @@
 <a href="acestream://d6d5775a2965b15ee405278b6a2e5a4374a80e25" style="text-decoration:none">Gol Mun</a></br>
 <a href="acestream://60106275d34f995e26bb2cc4a21a42f586c6c555" style="text-decoration:none">La 2 TVE</a><br>
 <a href="acestream://37d42d2b5d2278e6bb5810329a5f220867b3cf0c" style="text-decoration:none">M+ La Liga</a><br>
+<a href="acestream://859bb6295b8d0f224224d3063d9db7cdeca03122" style="text-decoration:none">M+ Vamos</a><br>
 <a href="acestream://7c12288663069a12aff58f3f62e8ea47ab78c65d" style="text-decoration:none">Sky Sports 1 HD [DE]</a><br>
 <a href="acestream://9292d3b32432efb56db4014933cbdec0a7cf2e36" style="text-decoration:none">Tennis Live</a><br>
 
