--- a/io.html
+++ b/io.html
@@ -39,8 +39,8 @@
 <a href="acestream://1960a9be8ae9e8c755330218eac4c5805466290a" style="text-decoration:none">DAZN Laliga (dial 55)</a><br>
 <a href="acestream://897e73c9d578848f596585314ecb9ae067c0e229" style="text-decoration:none">DAZN 1 Bar HD [DE]</a><br>
 <a href="acestream://8ca07071b39185431f8e940ec98d1add9e561639" style="text-decoration:none">DAZN 1 (dial 70)</a><br>
-<a href="acestream://7aa402bab9fff43258fbcf401881a39475f30aaf" style="text-decoration:none">DAZN 2</a><br>
-<a href="acestream://60dbeeb299ec04bf02bc7426d827547599d3d9fc" style="text-decoration:none">DAZN 2</a><br>
+<a href="acestream://7aa402bab9fff43258fbcf401881a39475f30aaf" style="text-decoration:none">DAZN 2 (dial 71)</a><br>
+<a href="acestream://60dbeeb299ec04bf02bc7426d827547599d3d9fc" style="text-decoration:none">DAZN 2 (dial 71)</a><br>
 <a href="acestream://12ea555d431dbe51fc8e4ca745aec09fe22a4865" style="text-decoration:none">DAZN 2 BAR HD [DE]</a><br>
 <a href="acestream://a8ffddef56f082d4bb5c0be0d3d2fdd8c16dbd97" style="text-decoration:none">DAZN 3</a><br>
 <a href="acestream://2fcdf7a19c0858f686efdfabd3c8c2b92bf6bcfd" style="text-decoration:none">DAZN 4</a><br>
@@ -54,8 +54,8 @@
 <a href="acestream://c373da9e901d414b7384e671112e64d5a2310c29" style="text-decoration:none">Eurosport 2</a><br>
 <a href="acestream://1b0bc4d4dcd609d3c092712e721392b199f50a62" style="text-decoration:none">EuroSport 1 HD [RU]<br>
 <a href="acestream://4b4907de51ec11087d4bed5876f2a0c68264f442" style="text-decoration:none">ESPN HD [US]<br>
-    <a href="acestream://664eb5fe460b96941aed633959a845b185cd8394" style="text-decoration:none">ESPN 2 US<br>
-        <a href="acestream://36cad67fed5a739757a9db844a551aa845a8d51b" style="text-decoration:none">Eleven Sports 1 [BE] DAZN Eleven 1<br>
+<a href="acestream://664eb5fe460b96941aed633959a845b185cd8394" style="text-decoration:none">ESPN 2 US<br>
+<a href="acestream://36cad67fed5a739757a9db844a551aa845a8d51b" style="text-decoration:none">Eleven Sports 1 [BE] DAZN Eleven 1<br>
 <a href="acestream://14407b00d454cb7dc0d70aa26e8bbc554f457f00" style="text-decoration:none">Eleven Sports 1 HD [PL]</a><br>
 <a href="acestream://d08013df6e437a1fdf1e0c34f573fdf6a40c7fce" style="text-decoration:none">Eleven Sports 2 [BE]</a><br>
 <a href="acestream://54a4a28882d3cae1ca19de5d4b022ebea40351f9" style="text-decoration:none">Eleven Sports 2 HD [PL]</a><br>
