--- a/io.html
+++ b/io.html
@@ -42,7 +42,7 @@
 <a href="acestream://7aa402bab9fff43258fbcf401881a39475f30aaf" style="text-decoration:none">DAZN 2 (dial 71)</a><br>
 <a href="acestream://60dbeeb299ec04bf02bc7426d827547599d3d9fc" style="text-decoration:none">DAZN 2 (dial 71)</a><br>
 <a href="acestream://12ea555d431dbe51fc8e4ca745aec09fe22a4865" style="text-decoration:none">DAZN 2 BAR HD [DE]</a><br>
-<a href="acestream://a8ffddef56f082d4bb5c0be0d3d2fdd8c16dbd97" style="text-decoration:none">DAZN 3</a><br>
+<a href="acestream://a8ffddef56f082d4bb5c0be0d3d2fdd8c16dbd97" style="text-decoration:none">DAZN 3 (dial 196)</a><br>
 <a href="acestream://2fcdf7a19c0858f686efdfabd3c8c2b92bf6bcfd" style="text-decoration:none">DAZN 4</a><br>
 <a href="acestream://5789ca155323664edd293b848606688edf803f4d" style="text-decoration:none">DAZN F1</a><br>
 <a href="acestream://9dad717d99b29a05672166258a77c25b57713dd5" style="text-decoration:none">DAZN F1</a><br>
