--- a/io.html
+++ b/io.html
@@ -106,6 +106,8 @@
 <a href="acestream://06b367c22394a1358c9cefa0cb5d0b64b9b2b3f4" style="text-decoration:none">M+ LaLiga TV Hypermotion</a><br>
 <a href="acestream://2709d0ab86cb6ce7ba4d3ad188d7fa80668f2924" style="text-decoration:none">M+ Laliga TV 2 Hypermotion</a><br>
 <a href="acestream://d81b4f2f3fde433539c097b2edc9b587ca47b087" style="text-decoration:none">M+ Laliga TV 2 Hypermotion</a><br>
+
+<a href="acestream://1d79a7543d691666135669f89f3541f54e2dd0a9" style="text-decoration:none">M+ Liga de Campeones (dial 60)</a><br>
 <a href="acestream://931b1984badcb821df7b47a66ac0835ac871b51c" style="text-decoration:none">M+ Liga de Campeones (dial 60)</a><br>
 <a href="acestream://e2e2aca792aae5da19995ac516b1d620531bd49c" style="text-decoration:none">M+ Liga de Campeones (dial 60)</a><br>
 <a href="acestream://f096a64dd756a6d549aa7b12ee9acf7eee27e833" style="text-decoration:none">M+ Liga de Campeones (dial 60)</a><br>
