--- a/io.html
+++ b/io.html
@@ -101,8 +101,8 @@
 <a href="acestream://7d8c87e057be98f00f22e23b23fbf08999e4b02f" style="text-decoration:none">M+ LaLiga TV (dial 54)</a><br>
 <a href="acestream://f031f5728b32f6089dda28edebe990cf198108d8" style="text-decoration:none">M+ LaLiga TV (dial 54)</a><br>
 <a href="acestream://1969c27658d4c8333ab2c0670802546121a774a5" style="text-decoration:none">M+ LaLiga TV (dial 54)</a><br>
-<a href="acestream://80126b240f3e4e004754fd8f8103e857ab2556a0" style="text-decoration:none">M+ Laliga TV 2</a><br>
-<a href="acestream://26029f72a4ca831d09deefe89534818db1d105bc" style="text-decoration:none">M+ Laliga TV 2</a><br>
+<a href="acestream://80126b240f3e4e004754fd8f8103e857ab2556a0" style="text-decoration:none">M+ Laliga TV 2 (dial 57)</a><br>
+<a href="acestream://26029f72a4ca831d09deefe89534818db1d105bc" style="text-decoration:none">M+ Laliga TV 2 (dial 57)</a><br>
 <a href="acestream://4c46585214b23b1d802ef2168060c7649a3894cf" style="text-decoration:none">M+ LaLiga TV Hypermotion (dial 56)</a><br>
 <a href="acestream://d81b4f2f3fde433539c097b2edc9b587ca47b087" style="text-decoration:none">M+ Laliga TV 2 Hypermotion (dial 59)</a><br>
 
