--- a/io.html
+++ b/io.html
@@ -37,6 +37,7 @@
 <a href="acestream://75251ba975132ec9a202806ba5bf606e87280c96" style="text-decoration:none">DAZN LaLiga (dial 55)</a><br>
 <a href="acestream://a3bca895c58d3fc7d5e4259d3d5e3cf0291d1914" style="text-decoration:none">DAZN Laliga (dial 55)</a><br>
 <a href="acestream://1960a9be8ae9e8c755330218eac4c5805466290a" style="text-decoration:none">DAZN Laliga (dial 55)</a><br>
+<a href="acestream://aa82e7d4f03061f2144a2f4be22f2e2210d42280" style="text-decoration:none">DAZN Laliga (dial 55)</a><br>
 <a href="acestream://897e73c9d578848f596585314ecb9ae067c0e229" style="text-decoration:none">DAZN 1 Bar HD [DE]</a><br>
 <a href="acestream://eaff9293c76a324c750ef5094c2a4e2c96518d1f" style="text-decoration:none">DAZN 1</a><br>
 <a href="acestream://8ca07071b39185431f8e940ec98d1add9e561639" style="text-decoration:none">DAZN 1 (dial 70)</a><br>
@@ -48,7 +49,6 @@
 <a href="acestream://5789ca155323664edd293b848606688edf803f4d" style="text-decoration:none">DAZN F1</a><br>
 <a href="acestream://9dad717d99b29a05672166258a77c25b57713dd5" style="text-decoration:none">DAZN F1</a><br>
 <a href="acestream://e1fcad9de0c782c157fde6377805c58297ab65c2" style="text-decoration:none">DAZN F1</a><br>
-<a href="acestream://aa82e7d4f03061f2144a2f4be22f2e2210d42280" style="text-decoration:none">DAZN Laliga</a><br>
 <a href="acestream://8c6a3a49e43b6d05ac93b83fe4a41660caffae01" style="text-decoration:none">DEIMA SPORT<br><br>
 
 <a href="acestream://5e4cd48c79f991fcbee2de8b9d30c4b16de3b952" style="text-decoration:none">Eurosport 1</a><br>
