--- a/elcano.html
+++ b/elcano.html
@@ -23,7 +23,7 @@
 	<colgroup width="200"></colgroup>
 	<colgroup width="300"></colgroup>
 	<tr>
-		<td height="17" align="left"><i><a href="https://www.elcano.in/">https://www.elcano.in/</a> (16/11/2023)</i></td>
+		<td height="17" align="left"><i><a href="https://www.elcano.top/">https://www.elcano.top/</a> (16/11/2023)</i></td>
 		<td align="left"><br></td>
 	</tr>
 	<tr>
